[tool.poetry]
name = "torchtime"
version = "0.1.0"
description = "Time series data sets for PyTorch"
authors = ["Philip Darke <hello@philipdarke.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
requests = "^2.27.1"
sklearn = "^0.0"
sktime = "^0.10.1"
torch = "^1.11.0"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
flake8 = "^4.0.1"
isort = "^5.10.1"
pre-commit = "^2.17.0"
pytest = "^7.1.1"
pytest-cov = "^3.0.0"
Sphinx = "^4.4.0"
myst-parser = "^0.17.0"
sphinx-autodoc-typehints = "^1.17.0"
sphinx-rtd-theme = "^1.0.0"
Pygments = "^2.11.2"
genbadge = {extras = ["all"], version = "^1.0.6"}

[tool.black]
include = '\.pyi?$'
target-version = ['py38']

[tool.isort]
profile = "black"
py_version = 38

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
